testdata/good/01-notype.gol
# type: a -> bool
fn(x) { true }
