testdata/bad/05-recursive.gol
(fn(x){x(x)})
(fn(x){x(x)})
